--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
     <body>
     <script src="./index.ts"></script>
     </body>
